# animeDataScienceProject

./: .gitignore  main.py  pyproject.toml
notebooks/: checkingAndProcessingFiles.ipynb
src/dataExtraction/: dataPreprocessing.py  myAnimeListExtractor.py
