[project]
name = "animedatascienceproject-app"
version = "0.1.0"
description = "Machine Learning project. We will extract data from MyAnimeList and use different LLMs and Neural Networks to perform NLP and image related tasks on the data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
